// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Braze's identifyUser2 destination V2 action: snapshot with all fields 1`] = `
Object {
  "aliases_to_identify": Array [
    Object {
      "external_id": "O$J@g9^nDz",
      "user_alias": Object {
        "alias_label": "O$J@g9^nDz",
        "alias_name": "O$J@g9^nDz",
      },
    },
  ],
  "emails_to_identify": Array [
    Object {
      "email": "test1@example.com",
      "external_id": "O$J@g9^nDz",
      "prioritization": Array [
        "least_recently_updated",
        "most_recently_updated",
      ],
    },
  ],
  "merge_behavior": "none",
}
`;

exports[`Testing snapshot for Braze's identifyUser2 destination V2 action: snapshot with both user_alias and email_to_identify fields 1`] = `
Object {
  "aliases_to_identify": Array [
    Object {
      "external_id": "test-user-4",
      "user_alias": Object {
        "alias_label": "legacy-alias-label",
        "alias_name": "legacy-alias-name",
      },
    },
  ],
  "emails_to_identify": Array [
    Object {
      "email": "test4@example.com",
      "external_id": "test-user-4",
      "prioritization": Array [
        "most_recently_updated",
        "unidentified",
      ],
    },
  ],
  "merge_behavior": "merge",
}
`;

exports[`Testing snapshot for Braze's identifyUser2 destination V2 action: snapshot with email_to_identify field only 1`] = `
Object {
  "emails_to_identify": Array [
    Object {
      "email": "test1@example.com",
      "external_id": "test-user-1",
      "prioritization": Array [
        "least_recently_updated",
        "most_recently_updated",
      ],
    },
  ],
  "merge_behavior": "merge",
}
`;

exports[`Testing snapshot for Braze's identifyUser2 destination V2 action: snapshot with minimal user_alias field only 1`] = `
Object {
  "aliases_to_identify": Array [
    Object {
      "external_id": "test-user-7",
      "user_alias": Object {
        "alias_label": "minimal-label",
        "alias_name": "minimal-alias",
      },
    },
  ],
}
`;
